ucp/deployment.yaml
apiVersion: v1
kind: "Namespace"
metadata:
  name: "hystrix-dashboard"
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "hystrix-dashboard"
  namespace: "hystrix-dashboard"
  labels:
    app: "hystrix-dashboard"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: "hystrix-dashboard"
    spec:
      containers:
      - name: "hystrix-dashboard"
        image: "fabric8/hystrix-dashboard:1.0.28"
        ports:
        - containerPort: 8080
          name: "http"
      serviceAccountName: "hystrix-dashboard-sa"
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "hystrix-dashboard-svc"
  namespace: "hystrix-dashboard" 
spec:
  ports:
  - port: 80
    protocol: "TCP"
    targetPort: 8080
  selector:
    app: "hystrix-dashboard"
  type: NodePort
